// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generics can customize error messages 1`] = `
Array [
  Object {
    "item": ValidationError {
      "children": undefined,
      "message": "Dude it needs to be a string",
      "operation": undefined,
      "paths": Array [],
    },
    "level": "error",
    "path": Array [],
  },
]
`;

exports[`generics can customize info messages 1`] = `
Array [
  Object {
    "item": ValidationError {
      "children": undefined,
      "message": "Dude it should probably be a string",
      "operation": undefined,
      "paths": Array [],
    },
    "level": "info",
    "path": Array [],
  },
]
`;

exports[`generics can customize warning messages 1`] = `
Array [
  Object {
    "item": ValidationError {
      "children": undefined,
      "message": "Dude it should probably be a string",
      "operation": undefined,
      "paths": Array [],
    },
    "level": "warning",
    "path": Array [],
  },
]
`;

exports[`generics can demote errors to warnings 1`] = `
Array [
  Object {
    "item": ValidationError {
      "children": undefined,
      "message": "Expected type \\"String\\", got \\"Number\\"",
      "operation": undefined,
      "paths": Array [],
    },
    "level": "warning",
    "path": Array [],
  },
]
`;

exports[`generics can merge rules 1`] = `
Array [
  Object {
    "item": ValidationError {
      "children": undefined,
      "message": "Must be at least 5 characters long",
      "operation": undefined,
      "paths": Array [],
    },
    "level": "error",
    "path": Array [],
  },
]
`;

exports[`generics returns arrays of errors/warnings by default 1`] = `
Array [
  Object {
    "item": ValidationError {
      "children": undefined,
      "message": "Expected type \\"String\\", got \\"Number\\"",
      "operation": undefined,
      "paths": Array [],
    },
    "level": "error",
    "path": Array [],
  },
]
`;
